Fix broken style

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -19,6 +19,7 @@
 
 .squishWrapper {
   position:relative;
+  display:flex;
 }
 
 body {
